SID2 and SID-3: Debug - CAL and Stokes

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/7/17"
+    "# JUICE RPWI HF HK: QL -- 2024/7/19"
    ]
   },
   {
@@ -111,10 +111,10 @@
     "# date='20240126'\n",
     "# date='20240701'\n",
     "# date='20240702'\n",
-    "date='20240706'\n",
+    "# date='20240706'\n",
     "\n",
     "# Ground\n",
-    "# date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
+    "date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
    ]
   },
   {
@@ -333,8 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(hk_hf.v1_8)\n",
-    "# print(hk_hf.heater_ena)"
+    "print(hk_hf.v1_8)\n",
+    "print(hk_hf.heater_ena)"
    ]
   },
   {
