--- a/JUICE-CDF-HF-SID2_sp_makemask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_makemask.ipynb
@@ -81,13 +81,13 @@
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** CAL set ***\n",
-    "band_mode = 0                           # [Power]      0: sum      1: /Hz\n",
-    "unit_mode = 0                           # [Power]      0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "cal_mode  = 0                           # [Power]      0: background     1: CAL     2: all\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "\n",
     "# *** Unit set ***\n",
-    "f_mode    = 1                           # [Frequency]  0: linear   1: log\n",
-    "time_mode = 1                           # [Time]       0: Epoch    1: data number\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "\n",
     "# *** Frenquency range set ***\n",
     "f_mode_min = 3000;   f_mode_max = 10000\n",
@@ -95,8 +95,6 @@
     "# *** Power range set ***\n",
     "p_raw_max = 7.0                         #              background: 7.5   CAL: 10\n",
     "p_raw_min = 0.0                         #              background: 2.5   CAL: 5\n",
-    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
@@ -230,6 +228,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15450989",
+   "metadata": {},
+   "source": [
+    "## CAL Waveform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852f7a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
+    "\n",
+    "data.Eu_i = data.Eu_i * 10**(cf/20.);   data.Eu_q = data.Eu_q * 10**(cf/20.)\n",
+    "data.Ev_i = data.Ev_i * 10**(cf/20.);   data.Ev_q = data.Ev_q * 10**(cf/20.)\n",
+    "data.Ew_i = data.Ew_i * 10**(cf/20.);   data.Ew_q = data.Ew_q * 10**(cf/20.)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "c661f058",
@@ -278,7 +299,7 @@
     "# ax5.plot(np.ravel(data.onboard_cal*20), '-r', label='Onboard-CAL (non)')\n",
     "ax6.plot(np.ravel(data.epoch[:]), '.')\n",
     "\n",
-    "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  ax5.set_ylabel('T [degC]');  ax6.set_xlabel(str_date)\n",
+    "ax1.set_ylabel('Eu '+str_unit);  ax2.set_ylabel('Ev '+str_unit);  ax3.set_ylabel('Ew '+str_unit);  ax4.set_ylabel('Frequency [kHz]');  ax5.set_ylabel('T [degC]');  ax6.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
@@ -317,7 +338,7 @@
     "print(\"[specific sweep]  SWEEP:\", n_sweep0, n_sweep1, \"in total of\", n_time0)\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 8))\n",
+    "fig = plt.figure(figsize=(14, 14))\n",
     "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3);  ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
     "\n",
     "ax1.plot(np.ravel(data.Eu_i[n_sweep0:n_sweep1]), '-r', linewidth=.5, label='Eu_i'); \n",
@@ -329,7 +350,7 @@
     "ax4.plot(np.ravel(data.frequency[n_sweep0:n_sweep1]),  '-b', linewidth=.5, label='Frequency');\n",
     "ax4.plot(np.ravel(data.sweep_start[n_sweep0:n_sweep1])*data.frequency[n_sweep0][-1][0], '-r', label='Sweep Start')\n",
     "ax5.plot(np.ravel(data.epoch[n_sweep0:n_sweep1+1]), '.')\n",
-    "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  \n",
+    "ax1.set_ylabel('Eu '+str_unit);  ax2.set_ylabel('Ev '+str_unit);  ax3.set_ylabel('Ew '+str_unit);  ax4.set_ylabel('Frequency [kHz]');  \n",
     "date1 = data.epoch[n_sweep0];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax5.set_xlabel(date1)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
@@ -369,7 +390,7 @@
     "n_sweep = n_time0//2;  n_step0 = 0;  n_step1 = n_step0 + 3\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0,  \"[Steps]\", n_step0, \"-\", n_step1)\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 8))\n",
+    "fig = plt.figure(figsize=(14, 14))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "ax1.plot(np.ravel(data.Eu_i[n_sweep][n_step0:n_step1]), '-r', linewidth=.5, label='Eu_i')\n",
@@ -380,7 +401,7 @@
     "ax3.plot(np.ravel(data.Ew_q[n_sweep][n_step0:n_step1]), ':g', linewidth=.5, label='Ew_q')\n",
     "ax4.plot(np.ravel(data.frequency[n_sweep][n_step0:n_step1]),  '-b', linewidth=.5, label='Frequency')\n",
     "ax4.plot(np.ravel(data.sweep_start[n_sweep][n_step0:n_step1])*data.frequency[n_sweep][n_step1][0], '-r', label='Sweep Start')\n",
-    "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  \n",
+    "ax1.set_ylabel('Eu '+str_unit);  ax2.set_ylabel('Ev '+str_unit);  ax3.set_ylabel('Ew '+str_unit);  ax4.set_ylabel('Frequency [kHz]');  \n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date1)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
@@ -421,12 +442,65 @@
    "source": [
     "# Spec mode: high resolution  \n",
     "spec = juice_spec.hf_sid2_getspec(data, cal_mode)\n",
-    "Epoch_1d = spec.epoch.tolist();   n_time0 = spec.EE.shape[0];  num_1d = np.arange(n_time0)\n",
-    "freq_1d = spec.freq[n_time0//2];  n_freq0 = freq_1d.shape[0]\n",
-    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"EE:\",   spec.EE.shape,   freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_1d[1] - freq_1d[0], \"kHz)\", n_freq0 )\n",
     "\n",
-    "EE_2d   = spec.EE.transpose();    EE_med   = np.median(spec.EE, axis=0)"
+    "Epoch_1d = spec.epoch.tolist();   n_time0 = spec.EE.shape[0];  num_1d = np.arange(n_time0)\n",
+    "freq_1d = spec.freq[n_time0//2];  n_freq0 = freq_1d.shape[0];  freq_width_1d = spec.freq_w[n_time0//2]\n",
+    "\n",
+    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
+    "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )\n",
+    "\n",
+    "EE_2d   = spec.EE.transpose();    EE_med   = np.median(spec.EE, axis=0); \n",
+    "EuEu_2d = spec.EuEu.transpose();  EuEu_med = np.median(spec.EuEu, axis=0)\n",
+    "EvEv_2d = spec.EvEv.transpose();  EvEv_med = np.median(spec.EvEv, axis=0)\n",
+    "EwEw_2d = spec.EwEw.transpose();  EwEw_med = np.median(spec.EwEw, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84fd18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sweep_num\n",
+    "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
+    "\n",
+    "# Peak\n",
+    "print(f\"[First - {n_sweep1}]\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep1]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(f\"[Mid - {n_sweep2}]\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep2]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(f\"[Last - {n_sweep3}]\")\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(spec.EE[n_sweep3]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9f3817d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep = n_time0//2;  \n",
+    "print(f\"[SWEEP - {n_sweep}]\")\n",
+    "peak_E = np.ravel(spec.EE  [n_sweep]); peak_f = np.argmax(peak_E); \n",
+    "print(\"Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"   EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu[n_sweep])[peak_f]),    \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv[n_sweep])[peak_f]),    \"     EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw[n_sweep])[peak_f]))\n",
+    "print(\"EuEv_re:\", '{:+.2e}'.format(np.ravel(spec.EuEv_re[n_sweep])[peak_f]), \"  EvEw_re:\", '{:+.2e}'.format(np.ravel(spec.EvEw_re[n_sweep])[peak_f]), \"  EwEu_re:\", '{:+.2e}'.format(np.ravel(spec.EwEu_re[n_sweep])[peak_f]))\n",
+    "print(\"EuEv_im:\", '{:+.2e}'.format(np.ravel(spec.EuEv_im[n_sweep])[peak_f]), \"  EvEw_im:\", '{:+.2e}'.format(np.ravel(spec.EvEw_im[n_sweep])[peak_f]), \"  EwEu_im:\", '{:+.2e}'.format(np.ravel(spec.EwEu_im[n_sweep])[peak_f]))\n",
+    "print(\"\")\n",
+    "print(\"  DoPuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoPuv[n_sweep])[peak_f]), \"    DoLuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoLuv[n_sweep])[peak_f]), \"    DoCuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoCuv[n_sweep])[peak_f]), \"    ANGuv:\", '{:+.2e}'.format(np.ravel(spec.E_ANGuv[n_sweep])[peak_f]))\n",
+    "print(\"  DoPvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoPvw[n_sweep])[peak_f]), \"    DoLvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoLvw[n_sweep])[peak_f]), \"    DoCvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoCvw[n_sweep])[peak_f]), \"    ANGvw:\", '{:+.2e}'.format(np.ravel(spec.E_ANGvw[n_sweep])[peak_f]))\n",
+    "print(\"  DoPwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoPwu[n_sweep])[peak_f]), \"    DoLwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoLwu[n_sweep])[peak_f]), \"    DoCwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoCwu[n_sweep])[peak_f]), \"    ANGwu:\", '{:+.2e}'.format(np.ravel(spec.E_ANGwu[n_sweep])[peak_f]))"
    ]
   },
   {
@@ -447,7 +521,6 @@
     "# Sweep_num\n",
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
-    "# n_sweep1 = 50; n_sweep2 = 1600;  n_sweep3 = 2000\n",
     "# Y-range\n",
     "p_min = p_min0;   p_max = p_max0\n",
     "# X-range\n",
@@ -490,12 +563,7 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)\n",
-    "\n",
-    "# Peak\n",
-    "print(f\"[First - {n_sweep1}]\"); peak_E = np.ravel(spec.EE[n_sweep1]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
-    "print(f\"[Mid - {n_sweep2}]\");   peak_E = np.ravel(spec.EE[n_sweep2]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
-    "print(f\"[Last - {n_sweep3}]\");  peak_E = np.ravel(spec.EE[n_sweep3]);   peak_f = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n"
+    "    fig.savefig(png_fname)"
    ]
   },
   {
