--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/15"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/19"
    ]
   },
   {
@@ -89,8 +89,8 @@
     "f_mode_max = 40000                      # 2068 : as same as SID-4/20\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
@@ -106,13 +106,13 @@
     "# *** Ground - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "\"\"\"\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
     "data_name_list = ['SID03-2ch-comp0-20231117-1438.cdf']\n",
     "data_name_list = ['SID03-2ch-comp1-20231117-1448.cdf']\n",
     "data_name_list = ['SID03-2ch-comp2-20231117-1500.cdf']\n",
     "data_name_list = ['SID03-3ch-comp0-20231117-1424.cdf']\n",
-    "data_name_list = ['SID03-3ch-comp1-20231117-1418.cdf']\n",
+    "data_name_list = ['SID03-3ch-comp1-20231117-1418.cdf']                      # \n",
+    "\"\"\"\n",
     "data_name_list = ['SID03-3ch-comp2-20231117-1429.cdf']\n",
     "data_name_list = ['SID03-3ch-comp3-20231117-1432.cdf']\n",
     "\"\"\"\n",
@@ -196,19 +196,20 @@
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T074511-20000108T074711_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12j_2024_05_15_17_41_59\n",
     "                 ]\n",
     "\n",
-    "# 202406 -- dryrun check\n",
-    "# TEST\n",
+    "# 202406-7 -- dryrun check\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202406_EM3/cdf/'\n",
     "# COMP1->2, 2->1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
     "                 ]\n",
-    "\"\"\"\n",
     "\n",
     "# 202407 -- LEGA check\n",
-    "# TEST\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240715/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240716T152808-20240716T153933_V01.cdf',\n",
-    "                 ]"
+    "                 ]\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240718/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000101T011258-20000101T013701_V01___TMIDX_00000.bin.cdf',\n",
+    "                 ]\n"
    ]
   },
   {
@@ -682,14 +683,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data.epoch[160:170])\n",
+    "# print(data.epoch)\n",
     "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n",
     "# print(freq1)\n",
-    "print(data.complex[160:170])\n",
+    "print(data.complex)\n",
     "print(data.cal_signal)\n",
     "print(data.onboard_cal)\n",
     "print(data.RFI_rejection)\n",
     "print(data.Pol_sep_SW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07a6a5a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sweep_num\n",
+    "n0 = 0;   n1 = n_time0//2;  n2 = n_time0-1  # 11\n",
+    "\n",
+    "# Peak\n",
+    "print(f\"[First - {n0}]\")\n",
+    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(f\"[Mid - {n1}]\")\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "print(f\"[Last - {n2}]\")\n",
+    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71045647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = n_time0-1;  \n",
+    "print(f\"[SWEEP - {n1}]\")\n",
+    "\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); \n",
+    "print(\"Peak at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "\n",
+    "print(\"   EuEu:\", '{:+.2e}'.format(np.ravel(data.EuEu[n1])[peak_f]),    \"     EvEv:\", '{:+.2e}'.format(np.ravel(data.EvEv[n1])[peak_f]),    \"     EwEw:\", '{:+.2e}'.format(np.ravel(data.EwEw[n1])[peak_f]))\n",
+    "print(\"EuEv_re:\", '{:+.2e}'.format(np.ravel(data.EuEv_re[n1])[peak_f]), \"  EvEw_re:\", '{:+.2e}'.format(np.ravel(data.EvEw_re[n1])[peak_f]), \"  EwEu_re:\", '{:+.2e}'.format(np.ravel(data.EwEu_re[n1])[peak_f]))\n",
+    "print(\"EuEv_im:\", '{:+.2e}'.format(np.ravel(data.EuEv_im[n1])[peak_f]), \"  EvEw_im:\", '{:+.2e}'.format(np.ravel(data.EvEw_im[n1])[peak_f]), \"  EwEu_im:\", '{:+.2e}'.format(np.ravel(data.EwEu_im[n1])[peak_f]))\n",
+    "print(\"\")\n",
+    "print(\"  DoPuv:\", '{:+.2e}'.format(np.ravel(data.E_DoPuv[n1])[peak_f]), \"    DoLuv:\", '{:+.2e}'.format(np.ravel(data.E_DoLuv[n1])[peak_f]), \"    DoCuv:\", '{:+.2e}'.format(np.ravel(data.E_DoCuv[n1])[peak_f]), \"    ANGuv:\", '{:+.2e}'.format(np.ravel(data.E_ANGuv[n1])[peak_f]))\n",
+    "print(\"  DoPvw:\", '{:+.2e}'.format(np.ravel(data.E_DoPvw[n1])[peak_f]), \"    DoLvw:\", '{:+.2e}'.format(np.ravel(data.E_DoLvw[n1])[peak_f]), \"    DoCvw:\", '{:+.2e}'.format(np.ravel(data.E_DoCvw[n1])[peak_f]), \"    ANGvw:\", '{:+.2e}'.format(np.ravel(data.E_ANGvw[n1])[peak_f]))\n",
+    "print(\"  DoPwu:\", '{:+.2e}'.format(np.ravel(data.E_DoPwu[n1])[peak_f]), \"    DoLwu:\", '{:+.2e}'.format(np.ravel(data.E_DoLwu[n1])[peak_f]), \"    DoCwu:\", '{:+.2e}'.format(np.ravel(data.E_DoCwu[n1])[peak_f]), \"    ANGwu:\", '{:+.2e}'.format(np.ravel(data.E_ANGwu[n1])[peak_f]))\n",
+    "\n",
+    "# UV\n",
+    "print('Stockes-UV: {:+.2e}'.format(np.ravel(data.E_Iuv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Quv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uuv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vuv[n1])[peak_f]))\n",
+    "print('Stockes-VW: {:+.2e}'.format(np.ravel(data.E_Ivw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Qvw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uvw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vvw[n1])[peak_f]))\n",
+    "print('Stockes-WU: {:+.2e}'.format(np.ravel(data.E_Iwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Qwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vwu[n1])[peak_f]))"
    ]
   },
   {
@@ -829,21 +882,7 @@
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "    fig.savefig(png_fname)\n",
-    "\n",
-    "# Peak\n",
-    "print(f\"[First - {n0}]\")\n",
-    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "print(f\"[Mid - {n1}]\")\n",
-    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "print(f\"[Last - {n2}]\")\n",
-    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
+    "    fig.savefig(png_fname)"
    ]
   },
   {
