--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -111,10 +111,10 @@
     "# date='20240126'\n",
     "# date='20240701'\n",
     "# date='20240702'\n",
-    "# date='20240706'\n",
+    "date='20240706'\n",
     "\n",
     "# Ground\n",
-    "date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
+    "# date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
    ]
   },
   {
@@ -325,16 +325,6 @@
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
     "fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(hk_hf.v1_8)\n",
-    "print(hk_hf.heater_ena)"
    ]
   },
   {
