--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/9"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/20"
    ]
   },
   {
@@ -90,8 +90,8 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n"
@@ -209,7 +209,7 @@
     "    print(i, cdf_file)\n",
     "\n",
     "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid20.hf_sid20_read(cdf, cf)\n",
+    "    data1 = juice_sid20.hf_sid20_read(cdf)\n",
     "\n",
     "    if i==0:\n",
     "        data = data1\n",
