--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -805,8 +805,8 @@
    "outputs": [],
    "source": [
     "n_sweep = n_time0//2;  \n",
-    "n_step0 = 6;  \n",
-    "n_step1 = n_step0 + 1\n",
+    "n_step0 = 0;   # 6  \n",
+    "n_step1 = n_step0 + 2\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0,  \"[Steps]\", n_step0, \"-\", n_step1)\n",
     "\n",
     "fig = plt.figure(figsize=(14, 14))\n",
@@ -2010,10 +2010,7 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_w-msk.png'\n",
-    "    fig.savefig(png_fname)\n",
-    "\n",
-    "\n",
-    "print(EE_count_msk)"
+    "    fig.savefig(png_fname)"
    ]
   },
   {
