--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/19"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/20"
    ]
   },
   {
@@ -418,7 +418,7 @@
     "    print(i, cdf_file)\n",
     "\n",
     "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid3.hf_sid3_read(cdf, cf)\n",
+    "    data1 = juice_sid3.hf_sid3_read(cdf)\n",
     "\n",
     "    if i==0:\n",
     "        data = data1\n",
