--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -90,8 +90,8 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)"
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "    print(i, cdf_file)\n",
     "\n",
     "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid4.hf_sid4_read(cdf, cf)\n",
+    "    data1 = juice_sid4.hf_sid4_read(cdf)\n",
     "\n",
     "    if i==0:\n",
     "        data = data1\n",
