--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/2/7"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/7/20"
    ]
   },
   {
@@ -86,8 +86,8 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "# cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "# print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                         # Plot dump folder"
@@ -145,7 +145,7 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid6.juice_getdata_hf_sid6(cdf, cf)\n",
+    "data = juice_sid6.juice_getdata_hf_sid6(cdf)\n",
     "\n",
     "date1 = data.epoch[0]\n",
     "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
@@ -554,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
