--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/7/20"
    ]
   },
   {
@@ -86,8 +86,8 @@
     "p_raw_min = 3.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid21.juice_getdata_hf_sid21(cdf, cf)\n",
+    "data = juice_sid21.juice_getdata_hf_sid21(cdf)\n",
     "\n",
     "date1 = data.epoch[0]\n",
     "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
@@ -208,10 +208,10 @@
     "    print(\"frequency width:\", freq_width1[0])\n",
     "    \"\"\"\n",
     "#\n",
-    "f_min = freq_1d[0]\n",
-    "f_max = freq_1d[N_frequency-1]\n",
+    "f_min0 = freq_1d[0]\n",
+    "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max, f_min)"
+    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "\n",
     "fig = plt.figure(figsize=(12, 14))\n",
     "ax1 = fig.add_subplot(8, 1, 1)\n",
@@ -299,14 +299,14 @@
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
     "\"\"\"\n",
     "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0]\n",
+    "ylim=[10**p_min, 10**p_max]\n",
     "ax1.set_ylim(ylim)\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ylim=[-10**p_max0, 10**p_max0]; ax2.set_ylim(ylim)\n",
+    "    ylim=[-10**p_max, 10**p_max]; ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
-    "ylim=[f_min, f_max]\n",
+    "ylim=[f_min0, f_max0]\n",
     "ax7.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -337,9 +337,9 @@
     "n1 = np.int16(n_time0/2)\n",
     "n2 = n_time0 # - 11\n",
     "# X-range\n",
-    "f_min0 = f_min;  f_max0 = f_max\n",
+    "f_min = f_min0;  f_max = f_max0\n",
     "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 1, 1);   ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
@@ -432,10 +432,10 @@
     "# ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8); \n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[f_min0, f_max0]\n",
+    "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); # ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0]; ax1.set_ylim(ylim)\n",
+    "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  # ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
@@ -481,9 +481,9 @@
    "outputs": [],
    "source": [
     "# Y-range\n",
-    "f_min0 = f_min;      f_max0 = f_max\n",
+    "f_min = f_min0;      f_max = f_max0\n",
     "# Z-range\n",
-    "p_min0 = p_min;      p_max0 = p_max\n",
+    "p_min = p_min0;      p_max = p_max0\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,8])\n",
     "ax1 = fig2d.add_subplot(2, 1, 1)\n",
