--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -87,7 +87,8 @@
     "p_raw_min = 4.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)"
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -134,7 +135,7 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid5.juice_getdata_hf_sid5(cdf, cf)\n",
+    "data = juice_sid5.juice_getdata_hf_sid5(cdf)\n",
     "\n",
     "date1 = data.epoch[0]\n",
     "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
@@ -200,8 +201,8 @@
     "    print(\"frequency width:\", freq_width1[0], data.subdiv_reduction[0])\n",
     "    \"\"\"\n",
     "\n",
-    "f_min = freq_1d[0]\n",
-    "f_max = freq_1d[N_frequency-1]\n",
+    "f_min0 = freq_1d[0]\n",
+    "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)"
    ]
   },
@@ -251,7 +252,7 @@
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
     "\"\"\"\n",
-    "ylim=[f_min, f_max]\n",
+    "ylim=[f_min0, f_max0]\n",
     "ax2.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -282,9 +283,9 @@
     "n1 = np.int16(n_time0/2)\n",
     "n2 = n_time0\n",
     "# X-range\n",
-    "f_min0 = f_min;  f_max0 = f_max\n",
+    "f_min = f_min0;  f_max = f_max0\n",
     "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "\n",
     "fig, cal = plt.subplots(figsize=(12, 8))\n",
     "\n",
@@ -307,9 +308,9 @@
     "cal.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[f_min0, f_max0];           cal.set_xlim(xlim)\n",
+    "xlim=[f_min, f_max];           cal.set_xlim(xlim)\n",
     "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0];   cal.set_ylim(ylim)\n",
+    "ylim=[10**p_min, 10**p_max];   cal.set_ylim(ylim)\n",
     "\n",
     "plt.show\n",
     "if dump_mode == 1:\n",
@@ -344,15 +345,15 @@
    "outputs": [],
    "source": [
     "# Y-range\n",
-    "f_min0 = f_min;      f_max0 = f_max\n",
+    "f_min = f_min0;      f_max = f_max0\n",
     "# Z-range\n",
-    "p_min0 = p_min;      p_max0 = p_max\n",
+    "p_min = p_min0;      p_max = p_max0\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,8])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1)\n",
     "\n",
     "# Y-axis\n",
-    "ax1.set_ylim(f_min0, f_max0)\n",
+    "ax1.set_ylim(f_min, f_max)\n",
     "if f_mode == 1:\n",
     "    ax1.set_yscale('log')\n",
     "ax1.set_ylabel('Frequency [kHz]')\n",
@@ -362,7 +363,7 @@
     "ax1.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
-    "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
+    "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
     "\n",
